--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>MLOps Project</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='css/logoIcon.png')}}">
   </head>
   <body style="background: rgba(19, 43, 201, 0.186);">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
