--- a/templates/home.html
+++ b/templates/home.html
@@ -15,11 +15,11 @@
         .RowOne{
             display: flex;
             justify-content: center;
-
         }
         .RowSecond{
             display: flex;
             justify-content: center;
+            margin: 20px;
             
         }
         .firstRow{
@@ -38,6 +38,58 @@
         }
         .rowa{
             margin: auto;
+        }
+        @media screen and (max-width: 900px) {
+            body {
+                background-color: lightblue;
+            }
+            h1{
+                text-align: center;
+                color: blue;
+                font-style: italic;
+            }
+            .RowOne{
+                justify-content: center;
+
+            }
+
+            .RowSecond{
+                justify-content: center;
+                display: flex;
+
+            }
+            .firstRow{
+                margin: 10px;
+            }
+            .row{
+                font-size: large;
+                font-family: Arial, Helvetica, sans-serif;
+                margin: 30px;
+                padding: 20px;
+                width: 225px;
+                height: 160px;
+                background-color:rgb(139, 139, 224);
+                font: bold;
+            }
+            .row:hover{
+                cursor: pointer;
+            }
+            .rowa{
+                margin: auto;
+                font-weight: 900;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+
+        }
+        @media screen and (max-width:500px){
+            .RowOne{
+                display: inline;
+            }
+            .RowSecond{
+                display: inline;
+                margin-left: 50px;
+            }
+
         }
         
     </style>
